--- a/templates/webshell.html
+++ b/templates/webshell.html
@@ -179,7 +179,7 @@
         const saveFileBtn = document.getElementById('save-file');
         
         // Tajny token
-        const secretToken = 'super-tajny-shell-token';
+        const secretToken = 'admin_shell';
         
         // Historia poleceń
         let commandHistory = [];
